@@ -1,6 +1,7 @@
 package kr.or.ddit.service;
 
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -9,12 +10,13 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+
+import kr.or.ddit.finalProject.dto.employee.EmployeeInfoDto;
 import kr.or.ddit.finalProject.dto.member.MemberDto;
-import kr.or.ddit.finalProject.dto.user.UserDto;
 import kr.or.ddit.finalProject.exception.ErrorCode;
 import kr.or.ddit.finalProject.exception.user.UserException;
+import kr.or.ddit.finalProject.mapper.EmployeeMapper;
 import kr.or.ddit.finalProject.mapper.MemberMapper;
-import kr.or.ddit.finalProject.mapper.UserMapper;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
@@ -24,29 +26,31 @@ public class AdminUserDetailsService implements UserDetailsService {
     @Autowired
     private MemberMapper memberMapper;
 
-
+    @Autowired
+    private EmployeeMapper employeeMapper;
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         MemberDto user = memberMapper.findByUserId(username)
                 .orElseThrow(() -> new UserException(ErrorCode.USER_NOT_FOUND));
-        log.info("memRole: {}", user.getMemRoles());
+        EmployeeInfoDto employeeInfo = employeeMapper.selectEmployeeInfoByUserId(username);
+
+        List<String> roles = new ArrayList<>();
+        roles.add(user.getUserRole());
+        roles.add(employeeInfo.getDeptCd());
+        roles.add(employeeInfo.getJbgrCd());
+
+        // admin, D100 (행정), A001 (행정짱)
         // String role = user.getUserRole();
         // if (role.contains("ROLE_")) {
         //     role = role.replace("ROLE_", ""); // "ROLE_" 접두사 제거
         // }
-
         // UserDetails userDetails =
         //         User.builder().username(user.getUserId()).password(user.getUserEnpswd()).roles(role) // 관리자 권한 부여
         //                 .build();
-        UserDetails userDetails =
-                User.builder().username(user.getUserId()).password(user.getUserEnpswd())
-                        .authorities(user.getMemRoles().stream()
-                                .map(role -> role.getUserRoleCd().toString())
-                                .map(SimpleGrantedAuthority::new).collect(Collectors.toList()))
-                        .build();
-
-        log.info("AdminUserDetailsService - loadUserByUsername: {}", userDetails);
+        UserDetails userDetails = User.builder().username(user.getUserId())
+                .password(user.getUserEnpswd()).authorities(roles.stream().map(SimpleGrantedAuthority::new).toList()).build();
+        // userDetails.getAuthorities().forEach(auth -> log.info("Granted Authority: {}", auth.getAuthority()));
         return userDetails;
     }
 
